[package]
name = "ns_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11" }
leafwing-input-manager = { version = "0.11.2" }
bevy_simple_text_input = { git = "https://github.com/NoahShomette/bevy_simple_text_input.git", branch = "main" }
bevy_eventlistener = { version = "0.6.1" }
bevy_mod_picking = { version = "0.17.0" }
