[package]
name = "ns_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.1" }
leafwing-input-manager = { version = "0.14.0" }
bevy_simple_text_input = { version = "0.8.0" }
bevy_eventlistener = { version = "0.8.1" }
bevy_mod_picking = { version = "0.20.1" }
serde = { version = "1.0.202" }
